Added Major updated to the app.jsx and app.css added new classes and new functions and features

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
 *{
     margin: 0;
     background-color: #0004FF;
+    cursor: none;
 }
+
+.custom-cursor {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: white;
+    pointer-events: none;
+    mix-blend-mode: difference;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    transition: opacity 0.3s ease;
+  }
