--- a/src/v2.css
+++ b/src/v2.css
@@ -192,9 +192,9 @@ body {
         justify-content: center;
         align-items: center; 
         scale: 0.8;
-        position: fixed; 
-        top: 30px;
-        left: 45%;
+        position: absolute;
+        top: -620px;
+        left: 50%;
         transform: translateX(-50%);
     }
 
